--- a/scss/adaptive/_footerMobile.scss
+++ b/scss/adaptive/_footerMobile.scss
@@ -150,7 +150,8 @@ footer{
 
 .footer-nav{
 	float: right;
-	@include r($mob){
+	width: calc(100% - 150px);
+	@include r($mob) {
 		max-width: 130px;
 		width: 100%;
 		display: inline-block;
@@ -160,12 +161,17 @@ footer{
 		font-size: 0;
 		list-style-type: none;
 		padding-bottom: 0;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-end;
 	}
 	&__item{
 		display: inline-block;
 		vertical-align: top;
 		margin: 0 15px;
 		max-width: 80px;
+		width: 80px;
+		margin-bottom: 10px;
 		@include r($mob){
 			display: block;
 			max-width: none;
@@ -175,12 +181,12 @@ footer{
 				margin-right: 0;
 			}
 		}
-		&:first-child{
-			margin-left: 0;
-		}
-		&:last-child{
-			margin-right: 0;
-		}
+		// &:first-child{
+		// 	margin-left: 0;
+		// }
+		// &:last-child{
+		// 	margin-right: 0;
+		// }
 	}
 	&__link{
 		font-size: 14px;
